# ros2_agent_sim

./: .gitmodules  README.md
drone_sim/: package.xml  setup.py
drone_sim/launch/: drone.launch.py  drone.py  drone_no_gz.launch.py  gz_sim.launch.py  robots.launch.py
drone_sim/mavros/: drone_px4_config.yaml  drone_px4_pluginlists.yaml
drone_sim/rviz/: drone_sim.rviz
gps_bridge/: CMakeLists.txt  package.xml
gps_bridge/src/: gps_bridge_node.cpp
ros2_agent/: package.xml  setup.py
ros2_agent/config/: robots.config.yaml
ros2_agent/launch/: agent.launch.py
ros2_agent/ros2_agent/: __init__.py  ros2_agent_node.py
ros2_agent/ros2_agent/cli/: __init__.py  interface.py
ros2_agent/ros2_agent/llm/: __init__.py  model.py
ros2_agent/ros2_agent/prompts/: __init__.py  system_prompts.py
ros2_agent/ros2_agent/tools/: __init__.py  robot_tools.py
sar_system/: CMakeLists.txt  package.xml
sar_system/launch/: sar_system.launch.py
sar_system/rviz/: sar.rviz
